[package]
name = "councillor"
version = "0.1.0"
edition = "2021"
authors = ["brzzbr"]

[[bin]]
name = "councillor-runner"
path = "src/main.rs"

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:0.2.4"

[dependencies]
async-openai = "0.21.0"
async-trait = "0.1.80"
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-retry = "0.3.0"
openssl = { version = "*", features = ["vendored"] }
config = "0.14.0"
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = "1.0.203"
serde_json = "1.0.117"